[package]
name = "passwall-native-messaging-host"
version = "1.14.0"
edition = "2021"

[[bin]]
name = "passwall-native-messaging-host"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
rand_core = "0.6"
base64 = "0.22"





