[package]
name = "passwall-desktop"
version = "1.18.0"
description = "Passwall Desktop - Password Manager"
authors = ["Passwall"]
edition = "2021"

[lib]
name = "passwall_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
rand_core = "0.6"
base64 = "0.22"
tauri-plugin-autostart = "2"









